tests/ui/const-function.rs
fn main() {}

#[wrap_match::wrap_match]
const fn const_function() -> Result<(), ()> {
    Ok(())
}
